--- a/src/app/(default)/(pages)/utente/[userId]/page.module.css
+++ b/src/app/(default)/(pages)/utente/[userId]/page.module.css
@@ -41,7 +41,11 @@
 
     .profileHeader {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: stretch;
+    }
+
+    .profileHeader > div {
+        width: 100%;
     }
 
     .profileHeader h1 {
