--- a/src/app/components/ui/PasswordStrenghtBox/PasswordStrenghtBox.module.css
+++ b/src/app/components/ui/PasswordStrenghtBox/PasswordStrenghtBox.module.css
@@ -49,3 +49,15 @@
 .bar.filled:nth-child(4) {
     background-color: var(--accent-600);
 }
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%;
+        padding: 24px;
+        box-sizing: border-box;
+    }
+
+    .message {
+        font-size: 16px;
+    }
+}
